[package]
name = "imk"
version = "0.1.1"
authors = ["Alex Kozadaev <akozadaev at yahoo com>"]

[dependencies]
chrono = "0.4.2"
getopts = "0.2.17"

[target.'cfg(target_os = "linux")'.dependencies]
inotify = "0.5.1"

[target.'cfg(any(target_os = "macos", target_os = "freebsd", target_os = "openbsd", target_os="netbsd"))'.dependencies]
nix = "0.17.0"
